[package]
name = "sdl_isometric"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dependencies.sdl2]
version="0.33"
features = ["ttf", "image", "gfx", "mixer"]

[dependencies.uuid]
version="0.8"
features = ["serde", "v4"]