[package]
name = "sdl_isometric"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.7"
rayon="1.1"
lazy_static="1.4.0"
tiled="0.9.3"
image="0.24"
jaso_sdl2={ path = "../jaso_sdl2" }
hangul_jaso={ path = "../hangul_jaso" }

[dependencies.sdl2]
version="0.35"
features = ["ttf", "image", "gfx", "mixer"]

[dependencies.uuid]
version="0.8"
features = ["serde", "v4"]

[[bin]]
name="ascii_test"
path = "src/bin/ascii_test.rs"

[[bin]]
name="screen_test"
path = "src/bin/screen_test.rs"